Blackpurl/src/objects/QB_Tax_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Id__c</fullName>
        <label>Accounting Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate_Value__c</fullName>
        <label>Rate Value</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Agency__c</fullName>
        <label>Tax Agency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>QB Tax Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rate_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>QB Tax Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Tax Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>